<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/header_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/back_btn"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="6dp"
                    android:layout_marginBottom="6dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/button_bg_03"
                    android:elevation="1dp"
                    android:padding="17dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_arrow_left" />

                <ImageView
                    android:id="@+id/header"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/image_loading" />


            </RelativeLayout>

            <LinearLayout
                android:id="@+id/firstPage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/timer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:paddingHorizontal="50dp"
                    android:paddingVertical="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/days"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/poppins_medium"
                            android:includeFontPadding="false"
                            android:textAlignment="center"
                            android:textSize="20sp"
                            tools:text="04" />


                        <TextView
                            android:id="@+id/hour"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/poppins_medium"
                            android:includeFontPadding="false"
                            android:textAlignment="center"
                            android:textSize="20sp"
                            tools:text="12" />

                        <TextView
                            android:id="@+id/minutes"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/poppins_medium"
                            android:includeFontPadding="false"
                            android:textAlignment="center"
                            android:textSize="20sp"
                            tools:text="32" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-6dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/poppins_medium"
                            android:includeFontPadding="false"
                            android:text="@string/days"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textSize="10sp" />


                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/poppins_medium"
                            android:includeFontPadding="false"
                            android:text="@string/hours"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textSize="10sp" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/poppins_medium"
                            android:includeFontPadding="false"
                            android:text="@string/minutes"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textSize="10sp" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:id="@+id/view2"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginHorizontal="20dp"
                    android:background="@color/black20" />

                <TextView
                    android:id="@+id/congrat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/congratulations"
                    android:textAlignment="center"
                    android:textColor="@color/black80"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/reward_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/poppins"
                    android:includeFontPadding="false"
                    android:textAlignment="center"
                    android:textColor="@color/black70"
                    android:textSize="14sp"
                    tools:text="Hai vinto un premio presso:" />

                <TextView
                    android:id="@+id/restaurant_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:includeFontPadding="false"
                    android:textAlignment="center"
                    android:textColor="@color/black80"
                    android:textSize="20sp"
                    tools:text="Ouya Gourmet" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RelativeLayout
                        android:id="@+id/relativeLayout2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:gravity="center"
                        app:layout_constraintBottom_toTopOf="@id/details"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:fontFamily="@font/poppins"
                            android:text="@string/here_your_code"
                            android:textAlignment="center"
                            android:textColor="@color/black70" />

                        <ImageView
                            android:id="@+id/qr_code"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/textView7"
                            android:layout_centerHorizontal="true"
                            android:adjustViewBounds="true"
                            android:src="@drawable/image_loading" />

                    </RelativeLayout>


                    <Button
                        android:id="@+id/details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:background="@drawable/button_bg_01"
                        android:fontFamily="@font/poppins_medium"
                        android:stateListAnimator="@null"
                        android:paddingHorizontal="30dp"
                        android:text="@string/offer_details"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>